<resources>
    <string name="app_name">GeekHubLessons1-6</string>
    <string name="button">Execute</string>
    <string name="itemLesson1">Lesson1</string>
    <string name="itemLesson2">Lesson2</string>
    <string name="itemLesson3">Lesson3</string>
    <string name="itemLesson4">Lesson4</string>
    <string name="itemLesson5">Lesson5</string>
    <string name="itemLesson6">Lesson6</string>

    <string name="btnFactorial">Factorial</string>
    <string name="btnFibonacci">Fibonacci</string>
    <string name="textFirst">Insert your wish:</string>
    <string name="textLesson2">Insert number:</string>
    <string name="textResult">Result is: </string>

    <string name="btnLesson4Next">Next</string>
    <string name="btnLesson4Prev">Previous</string>

    <string name="itemBar1">search</string>
    <string name="ItemBar2">sound-off</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>

    <string name="Anim_text">Animation</string>
    <string name="Rotate">Rotate</string>
    <string name="Blink">Blink</string>
    <string name="Bounce">Bounce</string>
    <string name="SlideUp">Slide-Up</string>
    <string name="ZoomOut">Zoom-Out</string>

    <string-array name="headers">
        <item>Rotate</item>
        <item>Blink</item>
        <item>Bounce</item>
        <item>Slide-Up</item>
        <item>Zoom-Out</item>
    </string-array>

    <string-array name="content">
        <item>Content 1</item>
        <item>Content 2</item>
        <item>Content 3</item>
        <item>Content 4</item>
    </string-array>


    <string name="DetailText">Animation</string>



</resources>
