<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuLesson1"
        android:title="@string/itemLesson1"
        android:icon="@drawable/ic_1" />
    <item
        android:id="@+id/menuLesson2"
        android:title="@string/itemLesson2"
        android:icon="@drawable/ic_2" />
    <item
        android:id="@+id/menuLesson3"
        android:title="@string/itemLesson3"
        android:icon="@drawable/ic_3" />
    <item
        android:id="@+id/menuLesson4"
        android:title="@string/itemLesson4"
        android:icon="@drawable/ic_4" />
    <item
        android:id="@+id/menuLesson5"
        android:title="@string/itemLesson5"
        android:icon="@drawable/ic_5" />
    <item
        android:id="@+id/menuLesson6"
        android:title="@string/itemLesson6"
        android:icon="@drawable/ic_6" />
</menu>