<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.isolomonik.geekhublesson1.Lesson2Activity">

    <TextView
        android:id="@+id/textViewLesson2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textLesson2"
        android:layout_alignBottom="@+id/editTextLesson2" />

    <EditText
        android:id="@+id/editTextLesson2"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btnFibonacci"
        android:layout_toEndOf="@+id/btnFibonacci" />

    <Button
        android:id="@+id/btnFibonacci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFibonacci"
        android:layout_below="@+id/textViewLesson2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFactorial"
        android:id="@+id/btnFactorial"
        android:layout_above="@+id/textResult"
        android:layout_toRightOf="@+id/editTextLesson2"
        android:layout_toEndOf="@+id/editTextLesson2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textResult"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/btnFibonacci"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btnFactorial"
        android:layout_alignEnd="@+id/btnFactorial" />
</RelativeLayout>
